fixed a few things like spacing and widths, still not responsive worry abt that soe other time

--- a/pages/styles/style.css
+++ b/pages/styles/style.css
@@ -62,7 +62,7 @@
 
 .tab-background{
   height: 60px;
-  width: 311px;
+  width: 90%;
   transform-origin: bottom left;
   transform: skew(-50deg, 0deg);
 }
